# ckb-combine-lock-poc

./: .gitignore  Cargo.toml  Makefile  README.md  capsule.toml
.github/workflows/: rust.yml
ckb-combine-lock-common/: Cargo.toml  README.md  combine_lock.mol  combine_lock_v2.mol
ckb-combine-lock-common/src/: blake2b.rs  chained_exec.rs  child_script_entry.rs  ckb_auth.rs  combine_lock_mol.rs  error.rs  generate_sighash_all.rs  lib.rs  lock_wrapper.rs  log.rs  logger.rs  primitives.rs  utils.rs
ckb-debugger-tests/: .gitignore  Cargo.toml  Makefile
ckb-debugger-tests/src/: global_registry.rs  hash.rs  lib.rs  mol_utils.rs  smt.rs
ckb-debugger-tests/templates/: always-success.json  auth-script-success.json  child-script-multi-inputs.json  child-script-multisig-success.json  child-script-success.json  cl-always-success-3-childs.json  cl-always-success-3i3c.json  cl-always-success-info-cell.json  cl-always-success-v2.json  cl-always-success.json  cl-child-script.json  cl-cl-always-success.json  gr-child-script.json  gr-general.json  gr-init.json  gr-insert.json  gr-update.json  negative-cl-always-failure.json  negative-cl-cl-always-failure.json
ckb-lock-common/: Cargo.toml  blockchain.mol
ckb-lock-common/src/: chained_exec.rs  child_script_entry.rs  ckb_auth.rs  error.rs  generate_sighash_all.rs  intersection.rs  lib.rs  lock_wrapper.rs  simple_cursor.rs  transforming.rs  utils.rs
contracts/auth-script-test/: Cargo.toml
contracts/auth-script-test/src/: entry.rs  error.rs
contracts/child-script-always-failure/: Cargo.toml
contracts/child-script-always-failure/src/: entry.rs  error.rs
contracts/child-script-always-success/: Cargo.toml
contracts/child-script-always-success-v2/: Cargo.toml
contracts/child-script-always-success/src/: entry.rs  error.rs  main.rs
contracts/child-script-example/: Cargo.toml
contracts/child-script-example/src/: constant.rs  entry.rs  error.rs  generate_sighash_all.rs  main.rs
contracts/ckb-combine-lock/: Cargo.toml  README.md
contracts/ckb-combine-lock-v2/: Cargo.toml
contracts/ckb-combine-lock-v2/src/: blake2b.rs  entry.rs  error.rs
contracts/ckb-combine-lock/src/: child_script_args.rs  constant.rs  entry.rs  error.rs  generate_sighash_all.rs  main.rs
contracts/global-registry/: Cargo.toml
contracts/global-registry/src/: entry.rs  error.rs  main.rs  transforming.rs
contracts/lock-wrapper/: Cargo.toml
contracts/lock-wrapper/src/: entry.rs  error.rs  main.rs
crates/types/: Cargo.toml  lock_wrapper.mol
crates/types/src/: combine_lock.rs  lib.rs  lock_wrapper.rs  primitives.rs
tests/global-registry/: Cargo.toml
tests/global-registry/src/: error.rs  main.rs
tests/src/: tests.rs
tests/test-child-script-example/: Cargo.toml
tests/test-child-script-example/src/: misc.rs
tests/test-child-script-example/tests/: test-template.json  test.rs  test_in_ckb_debugger.rs
