[package]
name = "ckb-combine-lock-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["log"]
log = []

[dependencies]
blake2b-rs = "0.2.0"
molecule = { version = "0.7.3", default-features = false }
ckb-std = "0.13.0"
hex = { version = "0.4.3", default-features = false, features = ["alloc"]}
log = { version = "0.4.17", default-features = false }
