[workspace]

[package]
name = "ckb-debugger-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
ckb-debugger-api = { git = "https://github.com/nervosnetwork/ckb-standalone-debugger.git", rev="975a954" }
ckb-mock-tx-types =  { git = "https://github.com/nervosnetwork/ckb-standalone-debugger.git", rev="975a954" }
ckb-types = "=0.108.1"
ckb-hash = "=0.108.1"
env_logger = "0.4.3"
lazy_static = "1.4.0"
log = "0.4.0"
serde_json = "1.0"
serde_plain = "1.0"
ckb-combine-lock-common = { path = "../ckb-combine-lock-common" }
sparse-merkle-tree = { version ="0.6.1" }
