[package]
name = "ckb-lock-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["log"]
log = []

[dependencies]
blake2b-ref = { git = "https://github.com/jjyr/blake2b-ref.rs.git", rev = "f1efc48" }
molecule = { version = "0.7.3", default-features = false }
ckb-combine-lock-types = { path = "../crates/types" }
ckb-std = { version = "0.14.3", features = ["ckb2023", "build-with-clang"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"]}
log = { version = "0.4.17", default-features = false }
molecule2 = { git = "https://github.com/XuJiandong/moleculec-c2.git", rev = "4c97e75" }
