[package]
name = "child-script-always-success"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-lock-common = { path = "../../ckb-lock-common" }
ckb-std = "0.13"
log = { version = "0.4.17", default-features = false }
