[package]
name = "child-script-always-success"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-lock-common = { path = "../../ckb-lock-common" }
ckb-std = { version = "0.14.3", features = ["ckb2023", "build-with-clang"] }
log = { version = "0.4.17", default-features = false }
