[package]
name = "ckb-combine-lock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["log"]
log = ["ckb-combine-lock-common/log"]

[dependencies]
ckb-std = { git = "https://github.com/nervosnetwork/ckb-std.git", rev="762a0ab"}
sparse-merkle-tree = { version ="0.6.1", default-features = false, features = ["smtc"] }
ckb-combine-lock-common = { path = "../../ckb-combine-lock-common" }
blake2b-rs = "0.2.0"
log = { version = "0.4.17", default-features = false }
