[package]
name = "global-registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2b-ref = { git = "https://github.com/jjyr/blake2b-ref.rs.git", rev = "f1efc48" }
ckb-lock-common = { path = "../../ckb-lock-common" }
ckb-std = { version = "0.14.3", features = ["ckb2023", "build-with-clang"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
log = { version = "0.4.17", default-features = false }
molecule = { version = "0.7.3", default-features = false }
