[package]
name = "ckb-combine-lock-types"
version = "0.1.0"
edition = "2021"

[features]
default = ["no_std"]
no_std = ["dep:ckb-standalone-types"]
std = ["dep:ckb-types"]

[dependencies]
molecule = { version = "0.7.3", default-features = false }
ckb-standalone-types = { version = "0.1.3", default-features = false, optional = true }
ckb-types = { version = "=0.108.1", optional = true }
