[workspace]
members = []

[package]
edition = "2021"
name = "test-child-script-example"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
blake2b-rs = "0.1"
ckb-chain-spec = "=0.100.0-rc2"
ckb-crypto = "=0.100.0-rc2"
ckb-error = "=0.100.0-rc2"
ckb-hash = "=0.100.0-rc2"
ckb-script = "=0.100.0-rc2"
ckb-traits = "=0.100.0-rc2"
ckb-types = "=0.100.0-rc2"
ckb-vm = "=0.20.0-rc1"
dyn-clone = "1.0.4"
hex = "0.4.3"
lazy_static = "1.3.0"
log = {version = "0.4.14", features = ["std"]}
openssl = "0.10.4"
rand = "0.6.5"
secp256k1 = {version = "0.22.1", features = ["rand-std", "recovery"]}
serde = {version = "1.0.130", features = ["derive"]}
sha3 = "0.9.1"
sparse-merkle-tree = {git = "https://github.com/nervosnetwork/sparse-merkle-tree.git", rev = "2dce546"}
